add admin banners

--- a/template/admin/index.ejs
+++ b/template/admin/index.ejs
@@ -2,9 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>首页-后台管理系统</title>
   </head>
   <body>
-    登录成功！
+    <div class="page">
+      <% include components/top.inc.ejs %>
+    </div>
+      <div class="content-wrap">
+        <h1>后台管理系统</h1>
+      </div>
   </body>
 </html>
